--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buscar Libros - Sistema de Gestión de Bibliotecas</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -37,6 +37,6 @@
     <footer>
         <p>&copy; 2024 Sistema de Gestión de Bibliotecas</p>
     </footer>
-    <script src="/js/app.js"></script>
+    <script src="/js/libros.js"></script>
 </body>
 </html>
